[tool.poetry]
name = "character-creation-module"
version = "0.1.0"
description = ""
authors = ["Dmitry Terehin <cheese-shop1@ya.ru>"]
readme = "README.md"
packages = [{include = "character_creation_module"}]

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
